# PicoFATFS

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  myboard_pico.h  shared.cmake
PicoFATFS/: CMakeLists.txt  shared.cmake
PicoFATFS/common/: diskio.c  fatfs_common.h  picofatfs_diskio.c
PicoFATFS/fatfs_0_1_5a/source/: ff.c  ff.h  ffconf.h
PicoFATFS/fatfs_flash/: fatfs_disk.c  fatfs_disk.h  fatfs_flash.h  fatfs_flash_common.h  memmap_custom.ld  usb_descriptors.c  usb_msc_callbacks.c  usb_msc_callbacks.h  usb_msc_driver.c
PicoFATFS/fatfs_sd/: fatfs_sd_conf.h  fatfs_sd_glue.c
PicoFATFS/fatfs_usb/: fatfs_usb_defines.h  usb_msc_driver.c
PicoFATFS/fatfs_usb_flash/: fatfs_disk.c  fatfs_flash.cpp  fatfs_flash.h  fatfs_flash_common.h  fatfs_flash_conf.h  tusb_config.h  usb_descriptors.c  usb_msc_callbacks.c
PicoFatFsTest/: CMakeLists.txt  main.cpp  sd_hw_config.c
fatfs_0_1_5a/source/: ffconf.h
fatfs_usb_flash/: diskio.c  fatfs_disk.h  fatfs_flash.c  fatfs_flash.h  fatfs_flash_common.h  usb_msc_callbacks.c  usb_msc_driver.c
